# prod_ecommerce

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
services/analytics/: pyproject.toml
services/inventory/: Dockerfile  README.md  pyproject.toml
services/inventory/src/: config_helper.py  entrypoint.py  main.py
services/inventory/src/config/: .dev.env  dev.ini  settings.py
services/inventory/src/listeners/: listener.py
services/inventory/src/listeners/rabbitmq/: rabbitmq_listener.py
services/inventory/src/transport/rabbitmq/: rabbitmq_transport.py
services/notification/: pyproject.toml
services/order/: Dockerfile  pyproject.toml
services/order/src/config/: settings.py
services/payment/: pyproject.toml
services/shipping/: pyproject.toml
shared/: README.md  pyproject.toml
shared/config/: config.ini  configreader.py
shared/logging/: otel.py
shared/messaging/: listener.py  producer.py
