[project]
name = "ecommerce"
version = "0.1.0"
description = "E-commerce modular monolith production-grade pet project"

[tool.uv.workspace]
members = [
    "shared",i
    "services/inventory",
    "services/order",
    "services/notification",
    "services/analytics",
    "services/shipping",
    "services/payment"
]

[tool.uv.sources]
ecommerce-shared = { workspace = true }