[project]
name = "inventory"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ecommerce-shared",
    "aio-pika>=9.6.2",
    "asyncio>=4.0.0",
    "opentelemetry-api>=1.43.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.43.0",
    "opentelemetry-instrumentation>=0.64b0",
    "opentelemetry-sdk>=1.43.0",
    "pika>=1.4.1",
    "pydantic-settings>=2.14.2",
]
